--- a/Tanks/Tanks.vcxproj.filters
+++ b/Tanks/Tanks.vcxproj.filters
@@ -58,13 +58,13 @@
     <ClInclude Include="h\Bala.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="h\Ltexture.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="h\Tank.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SDL_mixer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="h\LTexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
