--- a/Tanks/Tanks.vcxproj
+++ b/Tanks/Tanks.vcxproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <ClInclude Include="h\Bala.h" />
     <ClInclude Include="h\LTexture.h" />
+    <ClInclude Include="h\Main.h" />
     <ClInclude Include="h\Tank.h" />
     <ClInclude Include="h\Tile.h" />
     <ClInclude Include="SDL_mixer.h" />
