--- a/Tanks/Tanks.vcxproj
+++ b/Tanks/Tanks.vcxproj
@@ -158,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpp\Bala.cpp" />
+    <ClCompile Include="cpp\Global.cpp" />
     <ClCompile Include="cpp\LTexture.cpp" />
     <ClCompile Include="cpp\Main.cpp" />
     <ClCompile Include="cpp\Tank.cpp" />
@@ -165,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="h\Bala.h" />
+    <ClInclude Include="h\Global.h" />
     <ClInclude Include="h\LTexture.h" />
     <ClInclude Include="h\Main.h" />
     <ClInclude Include="h\Tank.h" />
