--- a/Tanks/Tanks.vcxproj.filters
+++ b/Tanks/Tanks.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="cpp\Tile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cpp\Global.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="h\Tile.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="h\Main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="h\Global.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
