--- a/Tanks/Tanks.vcxproj
+++ b/Tanks/Tanks.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="cpp\Global.cpp" />
     <ClCompile Include="cpp\LTexture.cpp" />
     <ClCompile Include="cpp\Main.cpp" />
+    <ClCompile Include="cpp\Principal.cpp" />
     <ClCompile Include="cpp\Tank.cpp" />
     <ClCompile Include="cpp\Tile.cpp" />
   </ItemGroup>
@@ -168,6 +169,7 @@
     <ClInclude Include="h\Global.h" />
     <ClInclude Include="h\LTexture.h" />
     <ClInclude Include="h\Main.h" />
+    <ClInclude Include="h\Principal.h" />
     <ClInclude Include="h\Tank.h" />
     <ClInclude Include="h\Tile.h" />
     <ClInclude Include="SDL_mixer.h" />
