--- a/Tanks/Tanks.vcxproj.filters
+++ b/Tanks/Tanks.vcxproj.filters
@@ -36,6 +36,9 @@
     <Image Include="res\hud_vida.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\Game_Over.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\lazy.map">
