--- a/Tanks/Tanks.vcxproj.filters
+++ b/Tanks/Tanks.vcxproj.filters
@@ -51,6 +51,21 @@
     <Image Include="res\Icon32.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\Scoreboard_button.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\MenuRender.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\GameOverRender.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\ScoreboardRender.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\OK_button.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\lazy.map">
