--- a/Tanks/Tanks.vcxproj.filters
+++ b/Tanks/Tanks.vcxproj.filters
@@ -66,6 +66,9 @@
     <Image Include="res\OK_button.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\NewHighScoreRender.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\lazy.map">
