--- a/Tanks/Tanks.vcxproj.filters
+++ b/Tanks/Tanks.vcxproj.filters
@@ -69,6 +69,12 @@
     <Image Include="res\NewHighScoreRender.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\Explosio.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Play_game_button.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\lazy.map">
@@ -186,6 +192,18 @@
       <Filter>Resource Files</Filter>
     </Media>
     <Media Include="res\InGameSong.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="res\GameOver.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="res\Backspace.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="res\Return.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="res\Type.wav">
       <Filter>Resource Files</Filter>
     </Media>
   </ItemGroup>
